fixed the schedule cut off for mobile

--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,13 @@ th,td {
   padding-left:10px;
 }
 
+.tb {
+  margin-left: 0%;
+}
+
+/* table{
+  width: 90%;
+} */
 
 @media (min-width: 600px) {
   .section-home {
@@ -95,6 +102,10 @@ th,td {
   th,td {
     padding-left:45px;
   }
+  table{
+    width: 100%;
+  }
+
 }
 
 @media (min-width: 950px) {
@@ -127,6 +138,9 @@ th,td {
   }
   td {
     font-size: 1.0rem;
+  }
+  table{
+    width: 100%;
   }
 
   .schedule_table {
